--- a/angular-rest/package.json
+++ b/angular-rest/package.json
@@ -23,8 +23,10 @@
     "@angular/router": "^4.2.4",
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.2.1",
     "popper.js": "^1.12.6",
+    "primeng": "^5.0.0-rc.0",
     "rxjs": "^5.4.2",
     "zone.js": "^0.8.14"
   },
